Made some changes to the index page, and added an animation page.

--- a/web/index.html
+++ b/web/index.html
@@ -46,7 +46,7 @@
 
 
 
-                <div ng-include src="'bottom.html'"> </div> <!—will put code from "bottom.html" --> 
+                <div ng-include src="'bottom.html'"> </div>
             </div> <!-- container -->
         </div> <!- ng-app -->
     </body>
