The index page now links to the new animation page. It also has links to the lab and home.

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
                         second header links to the clubs main website. The second header's link is a different color from the nav bar's 
                         links. The footer is slightly transparent. There is an image in the body section of the website. It is a .png
                         image. Additionlay, the content of the page wraps around when the browser size is changed. The title nav has 
-                        a text shadow effect to give the letters a shadow.
+                        a text shadow effect to give the letters a shadow. There is now a link to an animation page.
                     </p>
                     <p>
                         For now I'm filling this page with gibberish.
