--- a/web/top.html
+++ b/web/top.html
@@ -5,11 +5,17 @@
         Arsenal
     </div>
     <div id="nav">
+        
+        
+        <a href ="http://cis-linux2.temple.edu:8080/fa16_4350_tuf37373/index.html">Home</a>
+        |
         <a href="https://en.wikipedia.org/wiki/Arsenal_F.C.">Info</a>
         | 
         <a href="http://www.espnfc.us/club/arsenal/359/fixtures">Schedule</a>
         |
-        <a href="http://cis-linux2.temple.edu:8080/fa16_4350_tuf37373/Animation.html">Animation</a>
+        <a href ="http://cis-linux2.temple.edu/~sallyk/cis3344/index.php">Labs</a>
+        |
+        <a href="http://cis-linux2.temple.edu:8080/fa16_4350_tuf37373/newAnimation.html">Animation</a>
     </div>
     <span class="stopFloat"></span>
 </div>
