Added more lab projects.

--- a/web/top.html
+++ b/web/top.html
@@ -13,7 +13,7 @@
         | 
         <a href="http://www.espnfc.us/club/arsenal/359/fixtures">Schedule</a>
         |
-        <a href ="http://cis-linux2.temple.edu/~sallyk/cis3344/index.php">Labs</a>
+        <a href ="http://cis-linux2.temple.edu:8080/fa16_4350_tuf37373/Labs.html">Labs</a>
         |
         <a href="http://cis-linux2.temple.edu:8080/fa16_4350_tuf37373/newAnimation.html">Animation</a>
     </div>
